# aoc2025

./: .gitignore  Cargo.toml  README.md  justfile
common/src/: lib.rs
day01/: Cargo.toml
day01/benches/: benchmarks.rs
day01/src/: day01.rs  main.rs
day02/: Cargo.toml
day02/benches/: benchmarks.rs
day02/src/: day02.rs  main.rs
day03/: Cargo.toml
day03/benches/: benchmarks.rs
day03/src/: day03.rs  main.rs
day04/: Cargo.toml
day04/benches/: benchmarks.rs
day04/src/: day04.rs  main.rs
day05/: Cargo.toml
day05/benches/: benchmarks.rs
day05/src/: day05.rs  main.rs
day06/: Cargo.toml
day06/benches/: benchmarks.rs
day06/src/: day06.rs  main.rs
day07/: Cargo.toml
day07/benches/: benchmarks.rs
day07/src/: day07.rs  main.rs
day08/: Cargo.toml
day08/benches/: benchmarks.rs
day08/src/: day08.rs  main.rs
day09/: Cargo.toml
day09/benches/: benchmarks.rs
day09/src/: day09.rs  main.rs
day10/: Cargo.toml
day10/benches/: benchmarks.rs
day10/src/: day10.rs  main.rs
day11/: Cargo.toml
day11/benches/: benchmarks.rs
day11/src/: day11.rs  main.rs
day12/: Cargo.toml
day12/benches/: benchmarks.rs
day12/src/: day12.rs  main.rs
downloader/: Cargo.toml
downloader/src/: main.rs
src/: main.rs
template/: Cargo.toml
template/benches/: benchmarks.rs
template/src/: lib.rs  main.rs  {{project-name}}.rs
