[package]
edition = "2024"
name = "aoc2025"
version = "0.1.0"

[workspace]
members = [
    "common",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "downloader",
]
default-members = ["day??"]
resolver = "3"

[workspace.dependencies]
common = { path = "common" }
divan = "0.1.21"
once_cell = "1.21.3"
rstest = "0.26.1"
