[package]
edition = "2024"
name = "aoc2025"
version = "0.1.0"

[workspace]
members = [
    "common",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "downloader",
]
default-members = ["day??"]
resolver = "3"

[workspace.dependencies]
divan = "0.1.21"
itertools = "0.14.0"
once_cell = "1.21.3"
rstest = "0.26.1"

[workspace.dependencies.common]
path = "common"
