[package]
name = "day08"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
common.workspace = true
indices_union_find = "0.1.2"
once_cell.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day08-benchmarks"
path = "benches/benchmarks.rs"
harness = false